# esfxr

./: .editorconfig  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/base/esfxr-audio-driver/: Cargo.toml
crates/base/esfxr-audio-driver/src/: buffer.rs  engine.rs  lib.rs  output.rs
crates/base/esfxr-core/: Cargo.toml
crates/base/esfxr-core/src/: engine.rs  lib.rs
crates/base/esfxr-dsp/: Cargo.toml
crates/base/esfxr-dsp/src/: chain.rs  envelope.rs  hacker.rs  lib.rs  math.rs  parameters.rs  serializable_shared.rs
crates/esfxr-app/: Cargo.toml
crates/esfxr-app/src/: lib.rs  main.rs
crates/esfxr-chain/: Cargo.toml
crates/esfxr-chain/src/: lib.rs
crates/esfxr-core/: Cargo.toml
crates/esfxr-core/src/: export.rs  lib.rs  output.rs
crates/esfxr-dsp/: Cargo.toml
crates/esfxr-dsp/src/: adsr.rs  lib.rs
crates/esfxr-tui/: Cargo.toml
crates/esfxr-tui/src/: main.rs
crates/esfxr-web/: Cargo.toml  index.html
crates/esfxr-web/src/: main.rs
crates/frontends/esfxr-egui-common/: Cargo.toml
crates/frontends/esfxr-egui-common/src/: app_chain.rs  color.rs  lib.rs
crates/frontends/esfxr-egui-common/src/widgets/: envelope.rs  frequency.rs  mod.rs  peak_meter.rs  peak_meter_bar.rs  utils.rs  volume.rs  waveform.rs
crates/frontends/esfxr-egui-desktop/: Cargo.toml
crates/frontends/esfxr-egui-desktop/src/: main.rs
crates/frontends/esfxr-egui-web/: Cargo.toml  index.html
crates/frontends/esfxr-egui-web/src/: main.rs
crates/frontends/esfxr-tui/: Cargo.toml
crates/frontends/esfxr-tui/src/: main.rs
