[package]
name = "esfxr-web"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
eframe = "0.21.3"
esfxr-app = { path = "../esfxr-app" }
esfxr-chain = { path = "../esfxr-chain" }
color-eyre = "0.6.2"
tracing = "0.1.37"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
