[package]
name = "esfxr-audio-driver"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
cpal = "0.15.2"
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
