[package]
name = "esfxr-core"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
cpal = "0.15.0"
futures = "0.3.26"
hound = "3.5.0"
tracing = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15.0", features = ["wasm-bindgen"] }
