[package]
name = "esfxr-dsp"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
esfxr-audio-driver = { path = "../esfxr-audio-driver" }
fundsp = { git = "https://github.com/SamiPerttu/fundsp", rev = "fe8ba0a97000bf652ec5f575ac454793a762906e" }
tracing = "0.1.37"
