[package]
name = "esfxr-dsp"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
color-eyre = "0.6.2"
esfxr-audio-driver = { path = "../esfxr-audio-driver" }
flate2 = "1.0.26"
fundsp = { git = "https://github.com/SamiPerttu/fundsp", rev = "e3f818fc5ee590453dbfc2ec09680fb732323106" }
serde = { version = "1.0.163", features = ["derive"] }
tracing = "0.1.37"
