[package]
name = "esfxr-egui-common"
version = "0.0.0"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
edition = "2021"

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
tracing-subscriber = "0.3.16"
esfxr-core = { path = "../../base/esfxr-core" }
esfxr-dsp = { path = "../../base/esfxr-dsp" }
color-eyre = "0.6.2"
